--- a/Diabetes_Notebook.ipynb
+++ b/Diabetes_Notebook.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/bonsoul/Diabetes-Notebook/blob/main/Diabetes_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 22,
       "metadata": {
@@ -2906,9 +2896,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPLxnNoDouFAwUXS1I2qvM1",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
